@@ -624,8 +624,11 @@
   <name>fetcher.threads.fetch</name>
   <value>10</value>
   <description>The number of FetcherThreads the fetcher should use.
-    This is also determines the maximum number of requests that are 
-    made at once (each FetcherThread handles one connection).</description>
+  This is also determines the maximum number of requests that are
+  made at once (each FetcherThread handles one connection). The total
+  number of threads running in distributed mode will be the number of
+  fetcher threads * number of nodes as fetcher has one map task per node.
+  </description>
 </property>
 
 <property>
